# CommandFlow-rs

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
edge-automation-bridge/: manifest.json  package-lock.json  package.json  tsconfig.json
edge-automation-bridge/popup/: popup.js  popup.js.map
edge-automation-bridge/scripts/: build.mjs
edge-automation-bridge/src/: background.ts  compat.ts  content.ts  injected.ts  popup.html  popup.ts  types.ts
scripts/: build.ps1  build.sh  check_deps.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: automation.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  input_recorder.rs  lib.rs  main.rs  secure_settings.rs
src-tauri/src/automation/: edge_bridge.rs  executor.rs  file_ops.rs  image_match.rs  keyboard.rs  mod.rs  mouse.rs  ocr_match.rs  power.rs  process.rs  screenshot.rs  start_menu.rs  system_settings.rs  uia.rs  window.rs
src-tauri/src/workflow/: edge.rs  graph.rs  mod.rs  node.rs  serializer.rs
src/components/CoordinatePicker/: index.tsx
src/components/ExecutionLog/: index.tsx
src/components/FlowEditor/: index.tsx
src/components/InputRecorderCompactPanel/: index.tsx
src/components/InputRecordingSettingsModal/: index.tsx
src/components/InputRecordingVisualizer/: index.tsx
src/components/LlmSettingsModal/: index.tsx
src/components/NodePanel/: index.tsx
src/components/PathPickerDropdown/: index.tsx
src/components/PropertyModal/: index.tsx
src/components/PropertyPanel/: index.tsx
src/components/SmartInputSelect/: index.tsx
src/components/StartMenuAppOptionsList/: index.tsx
src/components/StartMenuAppSelect/: index.tsx
src/components/StartMenuAppThumbnail/: index.tsx
src/components/StatusBar/: index.tsx
src/components/StyledSelect/: index.tsx
src/components/SystemCoordinateOverlay/: index.tsx
src/components/Toolbar/: index.tsx
src/components/VariablePanel/: index.tsx
src/hooks/: useShortcutBindings.ts
src/nodes/: BaseNode.tsx  ClickNode.tsx  ConditionNode.tsx  ImageMatchNode.tsx  InputPresetReplayNode.tsx  KeyPressNode.tsx  LoopNode.tsx  OcrMatchNode.tsx  ScreenshotNode.tsx  TryCatchNode.tsx  VariableNode.tsx
src/stores/: executionStore.ts  settingsStore.ts  workflowStore.ts
src/types/: workflow.ts
src/utils/: execution.ts  llmEndpoint.ts  nodeCatalog.ts  nodeMeta.ts  nodePorts.ts  refresh.ts  startMenuApp.ts  workflowBridge.ts  workflowCompletion.ts
