[package]
name = "commandflow-rs"
version = "0.1.0"
description = "CommandFlow-rs: Visual desktop automation editor powered by Tauri"
authors = ["CommandFlow Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[lib]
name = "commandflow_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.2"
image = "0.25"
opencv = { version = "0.96", default-features = false, features = ["imgcodecs", "imgproc"], optional = true }
scrap = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "sync"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
opencv-support = ["dep:opencv"]
