[package]
name = "commandflow-rs"
version = "0.1.0"
description = "CommandFlow-rs: Visual desktop automation editor powered by Tauri"
authors = ["CommandFlow Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[lib]
name = "commandflow_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.2"
image = "0.25"
opencv = { version = "0.96", default-features = false, features = ["imgcodecs", "imgproc"], optional = true }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
template-matching = { version = "0.2", features = ["image"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "sync"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
xcap = { version = "0.8", features = ["image"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
opencv-support = ["dep:opencv"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
